syntax = "proto3";

package senderBot;

option go_package = "./sender";

import "google/api/annotations.proto";

service Send {
    rpc SendMsg(SendReq) returns (SendResp){
        option (google.api.http)={
            post:"/v1/send"
            body:"*"
        };
    }
    rpc GetMsgs(GetReq) returns(GetResp){
        option (google.api.http)={
            get: "/v1/get"
        };
    }
}

message SendReq {
    string text = 1;
}
message SendResp {
    string status = 1;
}
message GetReq {
    uint32 value = 1;
}
message GetResp {
    string text = 1;
}